Increase maven mem allocation