@@ -9,6 +9,9 @@ fi
 
 export OTF_MAPPING_HOME=/opt/otf-mapping-service-admin
 export OTF_MAPPING_CONFIG=/etc/opt/otf-mapping-service-rest/config.properties
+
+export MAVEN_OPTS='-XX:MaxPermSize=512m -Xmx3300M'
+
 csh /opt/otf-mapping-service-admin/admin/loader/src/main/scripts/load.csh
 
 
